Updates to export manifest

--- a/app/templates/feedlot/batches/create.html
+++ b/app/templates/feedlot/batches/create.html
@@ -25,6 +25,7 @@
                     <option value="pairing">Pairing</option>
                     <option value="checkin">Checkin</option>
                     <option value="repair">Repair</option>
+                    <option value="export">Export</option>
                 </select>
             </div>
             
