--- a/app/templates/feedlot/batches/edit.html
+++ b/app/templates/feedlot/batches/edit.html
@@ -25,6 +25,7 @@
                     <option value="pairing" {% if batch.event_type == 'pairing' %}selected{% endif %}>Pairing</option>
                     <option value="checkin" {% if batch.event_type == 'checkin' %}selected{% endif %}>Checkin</option>
                     <option value="repair" {% if batch.event_type == 'repair' %}selected{% endif %}>Repair</option>
+                    <option value="export" {% if batch.event_type == 'export' %}selected{% endif %}>Export</option>
                 </select>
             </div>
             
